# car-detective-mvp

./: .env  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.json  .eslintrc.overrides.cjs  .eslintrc.production.json  .gitignore  .npmignore  .npmrc  .puppeteerrc.js  AUDIT_INDEX.json  AUDIT_REPORT.md  COMPREHENSIVE_DUPLICATE_AUDIT_REPORT.md  DEPLOYMENT-INSTRUCTIONS.md  DUPLICATE_ANALYSIS_PLAN.md  Dockerfile  Dockerfile.frontend  ENHANCED_README.md  ENTERPRISE_READINESS_AUDIT.md  FOLLOW_UP_FORM_FIX_SUMMARY.md  GAPS_FIXLIST.md  README.md  REPO_AUDIT_REPORT.md  ain_audit.sh  ain_audit_report.txt  alias-imports.txt  alternative-install.sh  bun.lockb  depcheck-report-latest.txt  deploy-edge-function.sh  deploy-valuation-function.sh  docker-compose.yml  eslint.config.cjs  eslint.config.js  find-frontend-files.sh  frontend-files-list.txt  global.d.ts  index.html  install.sh  (+17 more)
apps/ain-valuation-engine/: .coverage  .coveragerc  .dockerignore  .env.bak  .env.dev  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .vercelignore  AIN_Enterprise_Development_Manual.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE_VEHICLE_PRICE_PIPELINE.md  AUTOMATED_MONITORING_SETUP.md  BEST_PRACTICES.md  BEST_PRACTICES_CHECKLIST.md  CHANGELOG.md  CI_CD_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_PHASE1_2_PACKAGE.md  COMPLETE_SUCCESS_REPORT.md  CONTRIBUTING.md  DATA_COLLECTION_INSTRUCTIONS.md  DECODER_COVERAGE_MATRIX.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOY_SUCCESS.sh  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_MODEL_IMPLEMENTATION.md  (+260 more)
(+2912 files in other folders)
