[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ain-valuation-engine"
version = "0.1.0"
description = "AIN vehicle valuation engine"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<2.4",
  "pyarrow>=15,<22",
  "scikit-learn>=1.4,<1.8",
  "joblib>=1.3,<2.0",
  "shap>=0.44,<0.49",
  "pydantic<2",
  "requests>=2.31,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["val_engine*","scripts*"]
